--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,19 +84,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/forgotpass"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="50dp"
         android:text="Not yet signed in?"
-        android:textColor="@color/black"
-        />
+        android:textColor="@color/black" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signup"
-        android:layout_width="256dp"
-        android:layout_height="59dp"
+        android:layout_width="300dp"
+        android:layout_height="69dp"
         android:layout_below="@id/notyet"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/purple_200"
